fix text overflow on very small viewports #12
tested for 320x480 px (AmIResponsive emulator size)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ p {
 }
 
 #learn-list .color-cover {
-  height: 180vh;
+  height: 190vh;
 }
 
 #learn-list ul {
